# controllers/europe.js
@@ -64,6 +64,34 @@ const postEuropePlace = async (req, res) => {
 }
 };
 
+// PUT - UPDATES SUGGESTIONS
+
+const updateEurope = async (req, res, next) => {
+  if (ObjectId.isValid(req.id)) {
+    return res.status(400).send("Invalid object id");
+  }
+  const userId = new ObjectId(req.params.id);
+  const europe = {
+    suggestion: req.body.suggestion
+  };
+  try {
+    const response = await mongodb
+      .getDb()
+      .db("TravelWish")
+      .collection("europe")
+      .replaceOne({ _id: userId }, europe);
+    console.log(response);
+    if (response.modifiedCount > 0) {
+      res.status(204).send();
+    }
+  } catch (error) {
+    return res.status(500).json({
+      success: false,
+      message: (response.error || "Some error occurred while updating suggestions.")
+    })
+  }
+};
+
 // DELETE - DELETE EUROPE PLACES
 const deleteEuropePlace = async (req, res) => {
   try{
@@ -79,4 +107,4 @@ const deleteEuropePlace = async (req, res) => {
   res.status(500).json(err);
 }
 };
-module.exports = { getAll, getEuropePlace, postEuropePlace, deleteEuropePlace };
+module.exports = { getAll, getEuropePlace, postEuropePlace, updateEurope, deleteEuropePlace };
