# controllers/oceania.js
@@ -64,6 +64,34 @@ const postOceaniaPlace = async (req, res) => {
 }
 };
 
+// PUT - UPDATES SUGGESTIONS
+
+const updateOceania = async (req, res, next) => {
+  if (ObjectId.isValid(req.id)) {
+    return res.status(400).send("Invalid object id");
+  }
+  const userId = new ObjectId(req.params.id);
+  const oceania = {
+    suggestion: req.body.suggestion
+  };
+  try {
+    const response = await mongodb
+      .getDb()
+      .db("TravelWish")
+      .collection("oceania")
+      .replaceOne({ _id: userId }, oceania);
+    console.log(response);
+    if (response.modifiedCount > 0) {
+      res.status(204).send();
+    }
+  } catch (error) {
+    return res.status(500).json({
+      success: false,
+      message: (response.error || "Some error occurred while updating suggestions.")
+    })
+  }
+};
+
 // DELETE - DELETE OCEANIA PLACES
 const deleteOceaniaPlace = async (req, res) => {
   try{
@@ -79,4 +107,4 @@ const deleteOceaniaPlace = async (req, res) => {
   res.status(500).json(err);
 }
 };
-module.exports = { getAll, getOceaniaPlace, postOceaniaPlace, deleteOceaniaPlace};
+module.exports = { getAll, getOceaniaPlace, postOceaniaPlace, updateOceania, deleteOceaniaPlace};
